--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 </div>
                 <div class="modal-body">
                     <ul id="selected-coins-list" class="list-group">
-                        <!-- List of selected coins will be dynamically added here -->
+                        <!-- List of selected coins will be added here -->
                     </ul>
                 </div>
                 <div class="modal-footer">
