you can change colors on reports page and more styling

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search Coin..." aria-label="Search"
                         id="search-input">
-                    <button class="btn btn-outline-success" type="submit" id="search-button">Search</button>
+                    <button class="btn btn-outline-success" type="clear" id="clear-button">Clear</button>
                 </form>
             </div>
         </div>
