--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <a class="nav-link" aria-current="page" href="#" id="home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="about">About</a>
+                        <a class="nav-link" href="#" id="reports">Real-Time Reports</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" id="reports">Real-Time Reports</a>
+                        <a class="nav-link" href="#" id="about">About Shahar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#" id="about-project">Project Info</a>
