--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <link rel="stylesheet" href="./css/btnAndSwitch.css">
     <link rel="stylesheet" href="./css/modal.css">
     <link rel="stylesheet" href="./css/pages.css">
-    <link rel="stylesheet" href="./css/reports.css">
     <link rel="stylesheet" href="./css/video.css">
+    <!-- SweetAlert2 CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+<!-- SweetAlert2 JavaScript -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <!-- SweetAlert2 CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 
